# fastapi-workshop

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  database.py  main.py  models.py  mypy.ini  pyproject.toml  setup.cfg  workshop_initial.psql
core/: config.py
requirements/: base.txt  dev.txt
tests/: users_test.py
