[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
skip = ["src", "versions", "migrations"]
default_section = "THIRDPARTY"

[tool.black]
line-length = 120
target-version = ["py37"]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | src
  )/
)
'''

[tool.poetry]
name = "fastapi-workshop"
version = "0.1.0"
description = "Awesome api"
authors = ["Jordy & Davy"]

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
