[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
skip = ["src", "versions", "migrations"]
default_section = "THIRDPARTY"

[tool.black]
line-length = 120
target-version = ["py37"]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | src
  )/
)
'''

[tool.poetry]
name = "fastapi-workshop"
version = "0.1.0"
description = "Awesome api"
authors = ["Jordy & Davy"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = {version = "^0.48.0", extras = ["all"]}
alembic = "^1.4.0"
bcrypt = "^3.1.7"
colorama = "^0.4.3"
gunicorn = "^20.0.4"
passlib = "^1.7.2"
psycopg2 = "^2.8.4"
pydantic = "^1.4"
PyJWT = "^1.7.1"
pytz = "^2019.3"
sqlalchemy = "^1.3.13"

[tool.poetry.dev-dependencies]
pytest = "^3.6"
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-comprehensions = "^3.2.2"
flake8-docstrings = "^1.5.0"
flake8-junit-report = "^2.1.0"
flake8-logging-format = "^0.6.0"
flake8-pep3101 = "^1.3.0"
flake8-print = "^3.1.4"
flake8-rst = "^0.7.1"
flake8-rst-docstrings = "^0.0.13"
isort = "^4.3.21"
mypy = "^0.761"
mypy_extensions = "^0.4.3"
pre-commit = "^2.0.1"
pydocstyle = "3.0.0"
python-dotenv = "^0.10.5"
